--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^3.9.0
   firebase_storage: ^12.3.7
   cloud_firestore: ^5.6.0
+  file_picker: ^8.1.7
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
