--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,10 @@ dependencies:
   image_network: ^2.5.6
   provider: ^6.1.2
   uuid: ^4.5.1
-  firebase_core: ^3.9.0
-  firebase_storage: ^12.3.7
-  cloud_firestore: ^5.6.0
   file_picker: ^8.1.7
   image_picker: ^1.1.2
+  http: ^1.3.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/example.json
+    - assets/images/default-menu.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
