--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pos_indorep
-description: "A new Flutter project."
+description: "Indorep Cafe POS Application"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.1.0+1
 
 environment:
   sdk: ^3.5.0
@@ -42,6 +42,13 @@ dependencies:
   image_picker: ^1.1.2
   http: ^1.3.0
   google_fonts: ^6.2.1
+  pretty_qr_code: ^3.3.0
+  package_info_plus: ^8.3.0
+  fluttertoast: ^8.2.12
+  restart_app: ^1.3.2
+  shared_preferences: ^2.5.2
+  collection: ^1.18.0
+  loader_overlay: ^4.0.4+1
 
 dev_dependencies:
   flutter_test:
