--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and Release Flutter App
 on:
   push:
     tags:
-      - 'v*' # Triggers on tags like v1.0.0
+      - 'v*'
 
 jobs:
   build:
@@ -13,20 +13,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Flutter
+      - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.1'
+          flutter-version: '3.22.1'   
+          channel: 'stable'
 
-      - name: Install Dependencies
+      - name: Flutter Pub Get
         run: flutter pub get
 
       - name: Build APK
         run: flutter build apk --release
-
-      # Optional: Build AppBundle
-      # - name: Build AAB
-      #   run: flutter build appbundle --release
 
       - name: Upload Release APK to GitHub
         uses: softprops/action-gh-release@v2
