--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -8,8 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up Java
       uses: actions/setup-java@v3
@@ -17,8 +19,7 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
 
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Set up Flutter
       uses: subosito/flutter-action@v2
       id: flutter-action
       with:
