--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*'  # Trigger on version tags like v1.0.0
 
+permissions:
+  contents: write 
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -43,4 +47,4 @@ jobs:
           build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
           build/app/outputs/flutter-apk/app-x86_64-release.apk
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_FINE_TOKEN }}
