--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -3,7 +3,7 @@ name: Build and Release Flutter APK
 on:
   push:
     tags:
-      - 'v*'  # Trigger on version tags like v1.0.0
+      - 'v*'
 
 permissions:
   contents: write 
@@ -38,13 +38,18 @@ jobs:
     - name: Build APK (split per ABI)
       run: flutter build apk --split-per-abi
 
-    - name: Upload release assets
+    - name: Rename APK for release
+      run: |
+        TAG_NAME="${{ github.ref_name }}"   # e.g. v0.9.4
+        VERSION_NAME=${TAG_NAME#v}          # Strip 'v' prefix
+        mv build/app/outputs/flutter-apk/app-arm64-v8a-release.apk \
+          build/app/outputs/flutter-apk/INDOREP-POS-${TAG_NAME}.apk
+
+    - name: Upload release asset
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.ref_name }}
         files: |
-          build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
-          build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
-          build/app/outputs/flutter-apk/app-x86_64-release.apk
+          build/app/outputs/flutter-apk/INDOREP-POS-${{ github.ref_name }}.apk
       env:
         GITHUB_TOKEN: ${{ secrets.GH_FINE_TOKEN }}
