--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,8 +55,8 @@ dependencies:
   image: ^4.5.4
   flutter_bluetooth_printer: ^2.17.1
   qr_flutter: ^4.1.0
-  install_plugin: ^2.1.0
   dio: ^5.8.0+1
+  flutter_app_installer: ^1.0.1
 
 dev_dependencies:
   flutter_test:
