--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,10 @@ dependencies:
   flutter_bluetooth_printer: ^2.17.1
   qr_flutter: ^4.1.0
   dio: ^5.8.0+1
-  flutter_app_installer: ^1.0.1
+  flutter_app_installer:
+    git:
+    url: https://github.com/elmaleek03/flutter_app_installer.git
+
 
 dev_dependencies:
   flutter_test:
