--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.9.1+1
+version: 0.9.5+4
 
 environment:
   sdk: ^3.5.0
@@ -59,6 +59,8 @@ dependencies:
   flutter_app_installer:
     git:
       url: https://github.com/elmaleek03/flutter_app_installer.git
+  rename_app: ^1.6.5
+  flutter_launcher_icons: ^0.14.4
 
 
 dev_dependencies:
@@ -72,6 +74,13 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   change_app_package_name: ^1.4.0
+  # flutter_launcher_icons: ^0.14.4
+
+  # flutter_launcher_icons:
+  #   android: true
+  #   image_path: "assets/images/app_icon.png" # path to your PNG
+  #   adaptive_icon_foreground: "assets/icon/app_icon.png" # (Android only)
+  #   adaptive_icon_background: "#ffffff" # or a path to a background image
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
