--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -6,8 +6,7 @@ on:
       - 'v*'
 
 permissions:
-  contents: write 
-
+  contents: write
 
 jobs:
   build:
@@ -27,21 +26,32 @@ jobs:
       uses: subosito/flutter-action@v2
       id: flutter-action
       with:
-         architecture: x64
+        architecture: x64
+
     - run: |
         git config --global --add safe.directory /opt/hostedtoolcache/flutter/${{ steps.flutter-action.outputs.CHANNEL }}-${{ steps.flutter-action.outputs.VERSION }}-${{ steps.flutter-action.outputs.ARCHITECTURE }}
         flutter --version
+
+    - name: Decode keystore
+      run: |
+        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/keystore.jks
+
+    - name: Create key.properties
+      run: |
+        echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/key.properties
+        echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
+        echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+        echo "storeFile=keystore.jks" >> android/key.properties
 
     - name: Install dependencies
       run: flutter pub get
 
     - name: Build APK (split per ABI)
-      run: flutter build apk --split-per-abi
+      run: flutter build apk --split-per-abi --release
 
     - name: Rename APK for release
       run: |
         TAG_NAME="${{ github.ref_name }}"   # e.g. v0.9.4
-        VERSION_NAME=${TAG_NAME#v}          # Strip 'v' prefix
         mv build/app/outputs/flutter-apk/app-arm64-v8a-release.apk \
           build/app/outputs/flutter-apk/INDOREP-POS-${TAG_NAME}.apk
 
@@ -49,7 +59,6 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.ref_name }}
-        files: |
-          build/app/outputs/flutter-apk/INDOREP-POS-${{ github.ref_name }}.apk
+        files: build/app/outputs/flutter-apk/INDOREP-POS-${{ github.ref_name }}.apk
       env:
         GITHUB_TOKEN: ${{ secrets.GH_FINE_TOKEN }}
