--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Decode keystore
       run: |
-        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/keystore.jks
+        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/keystore.jks
 
     - name: Create key.properties
       run: |
