--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   cloud_firestore: ^5.6.12
   fluent_ui: ^4.12.0
+  fl_chart: ^1.0.0
 
 
 dev_dependencies:
