--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -25,10 +25,10 @@ flutter_launcher_icons:
   #   background_color: "#hexcode"
   #   theme_color: "#hexcode"
 
-  # windows:
-  #   generate: true
-  #   image_path: "path/to/image.png"
-  #   icon_size: 48 # min:48, max:256, default: 48
+  windows:
+    generate: true
+    image_path: "assets/images/app_icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
 
   # macos:
   #   generate: true
