--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   fl_chart: ^1.0.0
   flutter_thermal_printer: ^1.2.2
   esc_pos_utils_plus: ^2.0.4
+  path_provider: ^2.1.5
 
 
 dev_dependencies:
