--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_thermal_printer: ^1.2.2
   esc_pos_utils_plus: ^2.0.4
   path_provider: ^2.1.5
+  window_manager: ^0.5.1
 
 
 dev_dependencies:
